<resources>
    <string name="app_name">Dasmeet</string>
    <string name="p1" translatable="false">Person 1</string>
    <string name="p2" translatable="false">Person 2</string>
    <string name="person_name" translatable="false">Person Name</string>
    <string name="person_desc" translatable="false">Lorem ipsum dolor sit amet consectetur adipiscing elit volutpat, nullam dignissim fermentum felis rhoncus ridiculus vel per urna dest it.</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Cuenta</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Visualización</string>
    <string name="cerrar">Salir</string>
    <string name="eliminar">Borrar cuenta </string>
    <string name="aspecto">Aspecto</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="esp">Castellano</string>
    <string name="ing">Inglés</string>
    <string name="guardar">Guardar</string>
    <string name="Gustos">Cambia tus gustos</string>
    <string name="datos">Cambia tus datos</string>
    <string name="contra">Contraseña</string>
    <string name="usuario">Correo</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="formulario1">Gustos que tiene que tener la otra persona   Puedes marcar varias opciones en cada pregunta</string>
    <string name="p1g">Pregunta nª1:¿Cúal es el sexo que te atrae?  </string>
    <string name="h">Hombre</string>
    <string name="m">Mujer</string>
    <string name="o">Otro</string>
    <string name="p2g">Pregunta nª2:¿Cuál es el color de ojos que te gusta?</string>
    <string name="marrones">Marrones</string>
    <string name="azules">Azules</string>
    <string name="verdes">Verdes</string>
    <string name="p3g">Pregunta nª3:¿Cuál es el color de pelo que te atrae?</string>
    <string name="rubio">Rubio</string>
    <string name="castano">Castaño</string>
    <string name="moreno">Moreno</string>
    <string name="op">Otro(Pelirrojo,azul,Verde,Rosa...)</string>
    <string name="p4g">Pregunta nª4:¿Cómo te gusta que sea una persona?</string>
    <string name="gracioso">Gracioso/a</string>
    <string name="alegre">Alegre</string>
    <string name="simpatic">Simpatico/a</string>
    <string name="borde">Borde</string>
    <string name="cabezon">Cabezon/a</string>
    <string name="humilde">Humilde</string>
    <string name="fiel">Fiel</string>
    <string name="impuntual">Impuntual</string>
    <string name="p5g">Pregunta nª5:¿Qué hobbies te gustaría que la otra persona practicase?</string>
    <string name="leer">Leer</string>
    <string name="deporte">Hacer Deporte</string>
    <string name="fiesta">Salir de fiesta</string>
    <string name="cine">Ir al cine</string>
    <string name="carino">Cariñoso/a</string>
    <string name="atras">Atrás</string>
    <string name="descripcion">Description</string>
    <string name="formulario2">Datos personales</string>
    <string name="p1d">Pregunta nª1:¿Cúal es tu sexo?  </string>
    <string name="p2d">Pregunta nª2:¿Cúal es tu color de ojos?  </string>
    <string name="p3d">Pregunta nª3:¿Cúal es tu color de pelo?  </string>
    <string name="p4d">Pregunta nª4:¿Cómo te describirías?(Marque 3 opciones)  </string>
    <string name="p5d">Pregunta nª5:¿Cúales son tus hobbies?(Marque las que quiera)  </string>
    <string name="start_chat">Empezar a chatear</string>
    <string name="load_next">Siguiente dúo</string>
    <string name="contra_cambiar">Cambiar contraseña</string>
    <string name="notification_sent">Notificación enviada</string>
    <string name="inicio_sesion">Inicio De Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuentas?</string>
    <string name="registrarse">Registrarse</string>
    <string name="acceder">Acceder</string>
    <string name="registro">Registro</string>
    <string name="biografia">Biografía</string>
    <string name="fechanacimiento">Fecha Nacimiento</string>
    <string name="Nombre">Nombre</string>
    <string name="confirmarCon">Confirmar Contraseña</string>
    <string name="profile_info">Información del perfil</string>

</resources>