<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GustosFragment">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F2D7D5"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F2D7D5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:src="@drawable/dasmeetlogo" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="415dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formulario1"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p1g"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_respuestas1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/opcion1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/h" />

                        <CheckBox
                            android:id="@+id/opcion2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m" />

                        <CheckBox
                            android:id="@+id/opcion3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/o" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p2g"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_respuestas2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/opcion4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marrones" />

                        <CheckBox
                            android:id="@+id/opcion5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/azules" />

                        <CheckBox
                            android:id="@+id/opcion6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/verdes" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p3g"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_respuestas3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/opcion7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rubio" />

                        <CheckBox
                            android:id="@+id/opcion8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/castano" />

                        <CheckBox
                            android:id="@+id/opcion9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moreno" />

                        <CheckBox
                            android:id="@+id/opcion10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p4g"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_respuestas4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/opcion11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gracioso" />

                        <CheckBox
                            android:id="@+id/opcion12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alegre" />

                        <CheckBox
                            android:id="@+id/opcion13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/simpatic" />

                        <CheckBox
                            android:id="@+id/opcion14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borde" />

                        <CheckBox
                            android:id="@+id/opcion15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cabezon" />

                        <CheckBox
                            android:id="@+id/opcion16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humilde" />

                        <CheckBox
                            android:id="@+id/opcion17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fiel" />

                        <CheckBox
                            android:id="@+id/opcion18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/impuntual" />
                        <CheckBox
                            android:id="@+id/opcion19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carino" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p5g"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_respuestas5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/opcion20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/leer" />

                        <CheckBox
                            android:id="@+id/opcion21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deporte" />

                        <CheckBox
                            android:id="@+id/opcion22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fiesta" />

                        <CheckBox
                            android:id="@+id/opcion23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cine" />


                        <CheckBox
                            android:id="@+id/opcion24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/o" />

                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/Cancelar"
                            android:layout_width="160dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="8dp"

                            android:src="@drawable/baseline_arrow_back_24"

                            />


                        <TextView

                            android:layout_width="20dp"
                            android:layout_height="14dp" />

                        <ImageView
                            android:id="@+id/Guardar"
                            android:layout_width="155dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"

                            android:src="@drawable/baseline_save_24"
                            />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>