<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilFragment">


    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="732dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="95dp"
            android:layout_height="99dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonCamara"
                android:layout_width="166dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/camara" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="341dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:text="@string/usuario" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contra" />

        <EditText
            android:id="@+id/editTextcontra"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />
        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descripcion" />

        <EditText
            android:id="@+id/editTextdesc"
            android:layout_width="361dp"
            android:layout_height="36dp"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/Gustos" />

            <ImageButton
                android:id="@+id/imagegustos"
                android:layout_width="74dp"
                android:layout_height="23dp"
                android:scaleType="fitCenter"
                android:src="@drawable/flecha" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:text="@string/datos" />

            <ImageButton
                android:id="@+id/imagedatos"
                android:layout_width="75dp"
                android:layout_height="22dp"

                android:scaleType="fitCenter"
                android:src="@drawable/flecha" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="365dp"
            android:layout_height="305dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
				android:id="@+id/imageViewguardar"
                android:layout_width="70dp"
                android:layout_height="30dp"                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/baseline_save_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>