<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D7D5">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="364dp"
            android:layout_height="317dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/p1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <include
            layout="@layout/gradient_view"
            android:layout_width="363dp"
            android:layout_height="161dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintEnd_toEndOf="@+id/imageView1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView1" />

        <TextView
            android:id="@+id/textViewName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="72dp"
            android:text="@string/person_name"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDesc1"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:justificationMode="none"
            android:text="@string/person_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="364dp"
            android:layout_height="317dp"
            android:layout_marginBottom="68dp"
            android:contentDescription="@string/p2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <include
            layout="@layout/gradient_view"
            android:layout_width="363dp"
            android:layout_height="161dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textViewDesc2"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:justificationMode="none"
            android:text="@string/person_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName2" />

        <TextView
            android:id="@+id/textViewName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="64dp"
            android:text="@string/person_name"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b_start_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/start_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#D200BCD4"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/load_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#D200BCD4"/>


</androidx.constraintlayout.widget.ConstraintLayout>